# configerus

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
configerus/: __init__.py  bootstrap.py  config.py  format.py  instances.py  loaded.py  plugin.py  shared.py  validator.py
configerus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
configerus/contrib/deep/: __init__.py  format.py
configerus/contrib/dict/: __init__.py  source.py
configerus/contrib/env/: README.md  __init__.py  env_json_source.py  env_specific_source.py  source.py
configerus/contrib/files/: __init__.py  format.py  source.py
configerus/contrib/get/: __init__.py  format.py
configerus/contrib/jsonschema/: __init__.py  validate.py
configerus/test/: __init__.py  test_1_load.py  test_1_shared.py  test_2_config_get_behaviour.py  test_3_config_copy.py  test_4_validate.py  test_5_templating.py  test_6_instances.py
docs/: 01.usage.md  02.design.md  03.plugins.md  80.TODO.md  README.md
