[metadata]
name = configerus
version = 0.3.2
description = Configuration manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/james-nesbitt/configerus
author = James Nesbitt
author_email = james.r.nesbitt@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Source=https://github.com/james-nesbitt/configerus

[options]
packages =
    configerus
    configerus.contrib.env
    configerus.contrib.deep
    configerus.contrib.dict
    configerus.contrib.files
    configerus.contrib.get
    configerus.contrib.jsonschema
    configerus.test
include_package_data = True
install_requires =
    pyyaml
    jsonschema

[options.entry_points]
configerus.bootstrap =
    deep        = configerus.contrib.deep:configerus_bootstrap
    env         = configerus.contrib.env:configerus_bootstrap
    dict        = configerus.contrib.dict:configerus_bootstrap
    files       = configerus.contrib.files:configerus_bootstrap
    get         = configerus.contrib.get:configerus_bootstrap
    jsonschema  = configerus.contrib.jsonschema:configerus_bootstrap
